crates/spoke-connect/bindings/swift/generated/spoke_connectFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_list_peer_host_capability_manifests(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_list_peers(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_list_rules(uint64_t ptr, RustBuffer rule_refs, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_list_timeline_events(uint64_t ptr, RustBuffer scope_json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_put_findings(uint64_t ptr, RustBuffer findings_json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_put_knowledge_entry(uint64_t ptr, RustBuffer entry_json, RustBuffer expected_base_revision, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_put_relation(uint64_t ptr, RustBuffer relation_json, RustBuffer expected_base_revision, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_register_peer(uint64_t ptr, uint64_t adapter, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_method_multipeerrouterffi_unregister_peer(uint64_t ptr, RustBuffer peer_id, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_clone_remoteadapterffi(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_free_remoteadapterffi(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_method_remoteadapterffi_close(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_get_host_capability_manifest(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_get_knowledge_entry(uint64_t ptr, RustBuffer entry_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_get_relation(uint64_t ptr, RustBuffer relation_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_invoke_tool(uint64_t ptr, RustBuffer capability_id, RustBuffer arguments_json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_list_knowledge_entries(uint64_t ptr, RustBuffer scope_json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_list_peer_host_capability_manifests(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_list_rules(uint64_t ptr, RustBuffer rule_refs, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_list_timeline_events(uint64_t ptr, RustBuffer scope_json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_put_findings(uint64_t ptr, RustBuffer findings_json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_put_knowledge_entry(uint64_t ptr, RustBuffer entry_json, RustBuffer expected_base_revision, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_put_relation(uint64_t ptr, RustBuffer relation_json, RustBuffer expected_base_revision, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_method_remoteadapterffi_register_tool_handler(uint64_t ptr, RustBuffer capability_id, uint64_t handler, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_remote_manifest(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_remote_peer_id(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_session_id(uint64_t ptr, RustCallStatus *_Nonnull out_status
);